--- a/EXERCISE13.css
+++ b/EXERCISE13.css
@@ -107,6 +107,9 @@ body {
 .colorme2 {
     background-color: #1b2838;
 }
-.formula {
+.formula2 {
     color: rgb(207, 200, 200);
+}
+.formula {
+    color: white;
 }
