--- a/EXERCISE13.css
+++ b/EXERCISE13.css
@@ -102,3 +102,14 @@ body {
 .formula {
     color: white;
 }
+@media screen and (max-width: 800px) {
+  .calcu {
+    display: block;
+    flex-direction: row;
+    margin-top: 30px;
+  }
+  .removeord {
+    order: unset;
+    order: initial;
+  }
+}
